[package]
name = "rgtui"
version = "0.1.0"
authors = ["Stef Robbe <stef.robbe@protonmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
log = "0.4.21"
ratatui = "0.26.0"
serde = "1.0.203"
serde-jsonlines = "0.5.0"
serde_derive = "1.0.203"
simplelog = "0.12.2"
tui-textarea = "0.4.0"
